Update z-index of svgWave to ensure proper layering

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ body {
 #svgWave {
     position: relative;
     top: -480px;
-    z-index: -10;
+    z-index: 2000;
 }
 
 
